--- a/SecretaryPage.form
+++ b/SecretaryPage.form
@@ -25,7 +25,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="ace08" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="ace08" binding="hygienistCal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -34,7 +34,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <grid id="54f0d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="54f0d" binding="dentistCal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -58,10 +58,11 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="af2cc"/>
                   <text value="Patient Number:"/>
                 </properties>
               </component>
-              <component id="af2cc" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+              <component id="af2cc" class="javax.swing.JTextField" binding="patientID1">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -74,10 +75,11 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Name:"/>
+                  <labelFor value="c368b"/>
+                  <text value="First Name:"/>
                 </properties>
               </component>
-              <component id="c368b" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+              <component id="c368b" class="javax.swing.JTextField" binding="firstName1">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -85,9 +87,9 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="8734e" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+              <component id="8734e" class="javax.swing.JTextField" binding="surname1">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -98,10 +100,11 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="d5bf5"/>
                   <text value="Date:"/>
                 </properties>
               </component>
-              <component id="d5bf5" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+              <component id="d5bf5" class="javax.swing.JTextField" binding="date1">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -114,10 +117,11 @@
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="405bf"/>
                   <text value="Start Time:"/>
                 </properties>
               </component>
-              <component id="405bf" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+              <component id="405bf" class="javax.swing.JTextField" binding="t1">
                 <constraints>
                   <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -138,10 +142,11 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <labelFor value="95090"/>
                       <text value="Appointment Type:"/>
                     </properties>
                   </component>
-                  <component id="95090" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                  <component id="95090" class="javax.swing.JComboBox" binding="t">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -152,6 +157,7 @@
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <labelFor value="66727"/>
                       <text value="Partner:"/>
                     </properties>
                   </component>
@@ -163,7 +169,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="67f87" class="javax.swing.JButton" binding="submitButton2" default-binding="true">
+                      <component id="67f87" class="javax.swing.JButton" binding="bookingSubmit">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -188,7 +194,7 @@
                       </vspacer>
                     </children>
                   </grid>
-                  <component id="66727" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+                  <component id="66727" class="javax.swing.JComboBox" binding="p">
                     <constraints>
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -206,6 +212,15 @@
                   </hspacer>
                 </children>
               </grid>
+              <component id="e86fb" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="8734e"/>
+                  <text value="Surname:"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="64a6c" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -221,42 +236,49 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="2640a"/>
                   <text value="Patient Number:"/>
                 </properties>
               </component>
-              <component id="2640a" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="2640a" class="javax.swing.JTextField" binding="patientID2">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <text value=""/>
+                </properties>
               </component>
               <component id="c4f28" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="7dd66"/>
                   <text value="First Name:"/>
                 </properties>
               </component>
-              <component id="7dd66" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="7dd66" class="javax.swing.JTextField" binding="firstName2">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <text value=""/>
+                </properties>
               </component>
               <component id="837c4" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="2cece"/>
                   <text value="Surname:"/>
                 </properties>
               </component>
-              <component id="2cece" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+              <component id="2cece" class="javax.swing.JTextField" binding="surname2">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -272,7 +294,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="e6166" class="javax.swing.JButton" binding="submitButton3" default-binding="true">
+                  <component id="e6166" class="javax.swing.JButton" binding="searchAppt">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -319,7 +341,7 @@
                   <text value="First Name:"/>
                 </properties>
               </component>
-              <component id="e844d" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+              <component id="e844d" class="javax.swing.JTextField" binding="firstName3">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -335,7 +357,7 @@
                   <text value="Surname:"/>
                 </properties>
               </component>
-              <component id="1deea" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+              <component id="1deea" class="javax.swing.JTextField" binding="surname3">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -351,7 +373,7 @@
                   <text value="Date of Birth:"/>
                 </properties>
               </component>
-              <component id="fe97e" class="javax.swing.JTextField" binding="textField11" default-binding="true">
+              <component id="fe97e" class="javax.swing.JTextField" binding="dob">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -367,7 +389,7 @@
                   <text value="Contact No.:"/>
                 </properties>
               </component>
-              <component id="66412" class="javax.swing.JTextField" binding="textField12" default-binding="true">
+              <component id="66412" class="javax.swing.JTextField" binding="contact">
                 <constraints>
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -413,7 +435,7 @@
                           <text value="Address Line 1:"/>
                         </properties>
                       </component>
-                      <component id="dfeda" class="javax.swing.JTextField" binding="textField13" default-binding="true">
+                      <component id="dfeda" class="javax.swing.JTextField" binding="adl1_1">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -445,7 +467,7 @@
                           <text value="City:"/>
                         </properties>
                       </component>
-                      <component id="feda1" class="javax.swing.JTextField" binding="textField14" default-binding="true">
+                      <component id="feda1" class="javax.swing.JTextField" binding="adl2_1">
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -453,7 +475,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="53bb6" class="javax.swing.JTextField" binding="textField15" default-binding="true">
+                      <component id="53bb6" class="javax.swing.JTextField" binding="district1">
                         <constraints>
                           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -461,7 +483,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="3bf5d" class="javax.swing.JTextField" binding="textField16" default-binding="true">
+                      <component id="3bf5d" class="javax.swing.JTextField" binding="city1">
                         <constraints>
                           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -477,7 +499,7 @@
                           <text value="Postcode:"/>
                         </properties>
                       </component>
-                      <component id="d5de6" class="javax.swing.JTextField" binding="textField17" default-binding="true">
+                      <component id="d5de6" class="javax.swing.JTextField" binding="pc1">
                         <constraints>
                           <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -493,7 +515,7 @@
                         <properties/>
                         <border type="none"/>
                         <children>
-                          <component id="88640" class="javax.swing.JButton" binding="submitButton" default-binding="true">
+                          <component id="88640" class="javax.swing.JButton" binding="addPatientBtn">
                             <constraints>
                               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
